<resources>
    <string name="app_name" translatable="false">TikTok AntiBurn</string>
    <string name="fastSettingsGoneOnclick">Hide elements for a couple of seconds after clicking</string>
    <string name="fastSettings">Settings</string>
    <string name="fastSettingsMainFlowtingWindow">"Height of the main element: "</string>
    <string name="TikTokNotFound">TikTok not found</string>
    <string name="UsageStatsPermessionIsNotGranted">Please, request permission of USAGE ACCESS manually</string>
    <string name="NoOverlayPermission">Failed to request Overlay permission. Request it manually</string>
    <string name="AcessabilitySettingNotReacheable">Cant reach accessibility setting. Request permission manually</string>
    <string name="Request_Floating">"Request \"Floating windows\" permission</string>
    <string name="Request_UsageStats">Request \"Usage Stats\" permission</string>
    <string name="Request_SpecialThings">Request \"Accessibility\" permission</string>
    <string name="ExtendedSettings">Create additional blocks</string>
    <string name="ExtendedSetting_Create">Create Element [%1$d / %2$d]</string>
    <string name="close" translatable="false">X</string>
    <string name="ExtendedSetting_Save">Save</string>
    <string name="ExtendedSetting_Remove" translatable="false">🗑️</string>
    <string name="ExtendedSetting_WidthUnknown">Width: ?px</string>
    <string name="ExtendedSetting_HeightUnknwon">Height: ?px</string>
    <string name="ExtendedSetting_Width">"Width: "</string>
    <string name="ExtendedSetting_Height">"Height: "</string>
    <string name="MinifiedStatus">Disable the basic overlap element</string>
    <string name="ExportLogs">Export logs</string>
    <string name="ClearLogs">Clear logs</string>
    <string name="OptimalSwitchTitle">Compatibility mode</string>
    <string name="OptimalSwitchDescription">Enable it if you have granted all permissions, but the item has not appeared. When enabled - TikTok closing event will have to wait a little longer than usual.</string>
    <string name="PacketName">TikTok Package Name</string>
    <string name="packetnamedescription">Specify the standard TikTok package name</string>
    <string name="LSPosedDescription">Use Root to prevent TikTok screen burn</string>
    <string name="LSPosedHookButtonByText">Create</string>
    <string name="GlobalSettingsDivide">Global Settings</string>
    <string name="MainElementSettingsDivide">Main Element Settings</string>
    <string name="OpenSettingsButton">Open App Settings</string>
    <string name="Additional">Additional:</string>
    <string name="LSPosedSettingTitle">LSPosed Module Settings</string>
    <string name="LSPosedHideType">Make button invisible</string>
    <string name="LSPosedWarning">If you change the above settings, the settings of the external application will be changed on its behalf. This is a complex operation, the developer is not responsible for the consequences!</string>
    <string name="Experimental">Experimental</string>
    <string name="UpdateFound">A new version of the app has been released:</string>
    <string name="UpdateTitle">New Update :)</string>
    <string name="LSPosed_OldDetection">Old Detection Method</string>
    <string name="LSPosed_OldDetectionDescription">Use the old detection method if the new one doesn\'t work. (Supports English and Russian only)</string>
    <string name="borderRadiusSetting">Rounding up:</string>
    <string name="borderRadiusSetting_Unknown">Rounding up: ?px</string>
    <string name="TopPaneModifier">Top panel visibility:</string>
    <string name="IdleBrightness">Idle brightness:</string>
    <string name="InputMethodSkip">Hide when keyboard is opened</string>
    <string name="SupportedInputMethods">Supporting:\nㅤㅤㅤ• GBoard\nㅤㅤㅤ• Facemoji\nㅤㅤㅤ• Yandex Keyboard\nㅤㅤㅤ• SwiftKey\nㅤㅤㅤ• Chrooma\nㅤㅤㅤ• Facemoji</string>
    <string name="BottomPaneModifier">Visibility of the lower panel:</string>
    <string name="Shake2Show">Shake to show panels</string>
    <string name="Shake2SHowDescription">Shake your phone to make the top and bottom panels visible</string>
    <string name="BatteryExpensive" translatable="false">🔋🔥</string>
    <string name="HighBatteryUsage">High battery usage</string>
    <string name="pleasestar">If you have a GitHub account, please put a star to the repository or tell your friends about the project. I will be very grateful, thank you! LOVE U ALL ❤️</string>
    <string name="EnableEditorPreview">Opens TikTok when you click on advanced settings. After setting up, you may need to minimize and open TikTok.</string>
    <string name="EnableEditorPreviewTitle">Preview of the advanced settings</string>
    <string name="FullScreenAPITitle">FullScreen Mode</string>
    <string name="FullScreenAPIDescription">Use full-screen mode for popups. This can solve problems when the system pushes the pop-up to the system panels.</string>
    <string name="__Binder_ClickOnAnyView">Click on an item to modify it</string>
    <string name="__Binder_Save">Save</string>
    <string name="__Binder_AllowMods">Allow modification</string>
    <string name="__Binder_KeepOnVideo">Apply for each video</string>
    <string name="__Binder_Visible">Visible:</string>
    <string name="__Binder_Alpha">Alpha:</string>
    <string name="__Binder_Saved">Saved!</string>
    <string name="__Binder_Saved2">Force restart TikTok to apply!</string>
    <string name="Settings_ADD_LogsTitle">Record logs</string>
    <string name="Settings_ADD_LogsDesc">Can use up to 15 MB. Disable if all working fine</string>
    <string name="Settings_LSP_BinderTitle_ON">Enter \"Click to hide\" Mode</string>
    <string name="Settings_LSP_BinderDesc">Enable this mode to customize the hiding of any elements. After applying the changes, restart TikTok</string>
    <string name="Settings_LSP_BinderTitle_OFF">Quit \"Click to hide\" mode</string>
    <string name="Alpha">Alpha:</string>
    <string name="Settings_ADD_FULLSCREEN_API_NotSupported">This function is available from Android 9+</string>
    <string name="TargetPackageAppNotFound">Target package ID was not found</string>
    <string name="Settings_Main_ShowDefaultElement">Show default element</string>
    <string name="Settings_Main_ShowDefaultDesc">Overlaps the \"+\" at the bottom of the screen</string>
    <string name="Settins_Main_DefaultPanelHeight">The default height of the element:</string>
    <string name="Settings_LSP_StructureDesc">The settings below depend on the structure of TikTok on your device. If the features below do not work, it means that your version of TikTok has a different XML structure than the one I used to create these features</string>
    <string name="Settings_LSP_HideInstead">Remove from the interface</string>
    <string name="Inactive">Inactive</string>
    <string name="Settings_MENU_Reset">Reset to default</string>
    <string name="Settings_MENU_ResetTitle">Reset the settings?</string>
    <string name="Settings_MENU_ResetService">This will delete all service settings (including basic and advanced settings). Erase everything?</string>
    <string name="Settings_MENU_ResetModule">This will delete all module settings. Erase everything?</string>
    <string name="Erase">Erase all</string>
    <string name="Cancel">Cancel</string>
    <string name="Settings_MENU_WasErased">The settings have been reset</string>
    <string name="NewUpdateTitle">There is an update!</string>
    <string name="Settings_ADD_GitVerse">GitVerse as a backup update channel</string>
    <string name="Settings_ADD_GitVerseDesc">GitHub does not work well in Russia. Updates will be checked through the Russian GitVerse instead of the foreign GitHub. If you are not in Russia, leave the Switch turned off.</string>
    <string name="NotificationsPermission">Request \"Notification\" permission</string>
    <string name="Settings_LSP_isModuleEnabled">Enable Module</string>
    <string name="Settings_LSP_RemoveModified">Delete everything modified?</string>
    <string name="Settings_LSP_RemoveModified_Desc">This will delete the list of items that you created. Their modification will no longer work.</string>
    <string name="Yes">Yes</string>
    <string name="Done">Done!</string>
    <string name="SETTINGS_MIGRATION_FAILED">An error occurred when updating the settings.</string>
    <string name="touchThroughToggle">Disable click detection</string>
    <string name="GoogleCrashlyticsSettingsDesc">Please send reports about app crashes and slow performance. No analytics are collected. The reports are anonymous. If it\'s not too much trouble, please leave this feature enabled - it will help us improve the app.</string>
    <string name="GoogleCrashlyticsSettingsTitle">Anonymous Malfunction Report</string>
    <string name="ThankYou">Thank You! :)</string>
    <string name="PleaseRequestOverlay">Please grant overlay permission first!</string>
    <string name="FloatingWindowsLimitTitle">Testing firmware</string>
    <string name="FloatingWindowsLimitDesc">The maximum number of overlays is being tested</string>
    <string name="FloatingWindowsLimitError">You have reached the window limit of your firmware</string>
    <string name="GrandOverlayFirst">Please grant overlay permission first!</string>
    <string name="ServiceOverlayPermissionNotGranted">Please grant overlay permission!</string>
</resources>