<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:background="#241F1F">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/Additional_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/fast_setting_bg"
            android:padding="12dp"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="250dp">

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/EnableLogging"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/Settings_ADD_LogsTitle"
                android:textColor="@color/SeekBackgroundFilled"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:thumbTint="@color/SeekBackgroundFilled"
                app:trackDecorationTint="@color/SeekBackgroundFilled"
                app:trackTint="@color/MID" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:alpha="0.75"
                android:paddingBottom="6dp"
                android:text="@string/Settings_ADD_LogsDesc"
                android:textColor="@color/SeekBackgroundFilled"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/EnableLogging" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/Additional_2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="4dp"
            android:background="@drawable/fast_setting_bg"
            android:padding="12dp"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="250dp">

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/Compatibility_MODE"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/OptimalSwitchTitle"
                android:textColor="@color/SeekBackgroundFilled"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:thumbTint="@color/SeekBackgroundFilled"
                app:trackDecorationTint="@color/SeekBackgroundFilled"
                app:trackTint="@color/MID" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:alpha="0.75"
                android:paddingBottom="6dp"
                android:text="@string/OptimalSwitchDescription"
                android:textColor="@color/SeekBackgroundFilled"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/Compatibility_MODE"
                app:layout_constraintTop_toBottomOf="@id/Compatibility_MODE" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/Additional_3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="4dp"
            android:background="@drawable/fast_setting_bg"
            android:padding="12dp">

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/FullScreenAPISwitch"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/FullScreenAPITitle"
                android:textColor="@color/SeekBackgroundFilled"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:thumbTint="@color/SeekBackgroundFilled"
                app:trackDecorationTint="@color/SeekBackgroundFilled"
                app:trackTint="@color/MID" />

            <TextView
                android:id="@+id/FullScreenAPIText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:alpha="0.75"
                android:paddingBottom="6dp"
                android:text="@string/FullScreenAPIDescription"
                android:textColor="@color/SeekBackgroundFilled"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/FullScreenAPISwitch" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:id="@+id/divider10"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="12dp"
            android:background="?android:attr/listDivider" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/Additional_4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="12dp"
            android:background="@drawable/fast_setting_bg"
            android:padding="12dp">

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/GoogleHelpers"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/GoogleCrashlyticsSettingsTitle"
                android:textColor="@color/SeekBackgroundFilled"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:thumbTint="@color/SeekBackgroundFilled"
                app:trackDecorationTint="@color/SeekBackgroundFilled"
                app:trackTint="@color/MID" />

            <TextView
                android:id="@+id/GoogleHelpersText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:alpha="0.75"
                android:paddingBottom="6dp"
                android:text="@string/GoogleCrashlyticsSettingsDesc"
                android:textColor="@color/SeekBackgroundFilled"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/GoogleHelpers" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/Additional_5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="4dp"
            android:background="@drawable/fast_setting_bg"
            android:padding="12dp">

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/UseGitVerseAPI"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/Settings_ADD_GitVerse"
                android:textColor="@color/SeekBackgroundFilled"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:thumbTint="@color/SeekBackgroundFilled"
                app:trackDecorationTint="@color/SeekBackgroundFilled"
                app:trackTint="@color/MID" />

            <TextView
                android:id="@+id/GitVerseAPIText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.75"
                android:paddingBottom="6dp"
                android:text="@string/Settings_ADD_GitVerseDesc"
                android:textColor="@color/SeekBackgroundFilled"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/UseGitVerseAPI" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</ScrollView>